# STAS-Security-Timeline-Security-Suite-

./: CMakeLists.txt  README.md  STAS_Dashboard.spec  requirements.txt
build_scripts/: build_cpp.bat  build_python.bat
data/: baseline_data.csv
src/cpp/: autorun_detector.cpp  autorun_detector.h  dynamic_timeline.cpp  dynamic_timeline.h  graphviz_calculator.bak  graphviz_generator.bak  main.cpp  risk_scoring.cpp  risk_scoring.h  sandbox.cpp  sandbox.h  sqlite_db.cpp  sqlite_db.h  static_analysis.cpp  static_analysis.h  utils.h
src/python/: anomaly_detector.py  dashboard.py  reports.py  utils.py
